kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: domserver
  name: domserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: domserver
  template:
    metadata:
      labels:
        app: domserver
    spec:
      containers:
      - name: domserver
        image: domjudge/domserver:latest
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 100m
            memory: 500Mi
          requests:
            cpu: 1m
            memory: 10Mi

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: judgehost
  name: judgehost
spec:
  replicas: 1
  selector:
    matchLabels:
      app: judgehost
  template:
    metadata:
      labels:
        app: judgehost
    spec:
      containers:
      - name: judgehost
        image: domjudge/judgehost:8.1.3
        securityContext:
          privileged: true
          capabilities:
            add:
              - SYS_ADMIN
          runAsUser: 0
        resources:
          limits:
            cpu: 100m
            memory: 500Mi
          requests:
            cpu: 1m
            memory: 10Mi
        volumeMounts:
        - name: cgroup
          mountPath: /sys/fs/cgroup
          readOnly: true
      volumes:
      - name: cgroup
        hostPath:
          path: /sys/fs/cgroup
          type: Directory

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mariadb
  name: mariadb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
      - name: mariadb
        image: mariadb:10.9.6
        ports:
        - containerPort: 3306
        resources:
          limits:
            cpu: 100m
            memory: 500Mi
          requests:
            cpu: 1m
            memory: 10Mi
        volumeMounts:
        - name: mariadb
          mountPath: /var/lib/mysql
      volumes:
      - name: mariadb
        persistentVolumeClaim:
          claimName: mariadb-pvc
